issue #61 solved: changed the z-index of the scroll content

--- a/lakaxita/static/css/main.sass
+++ b/lakaxita/static/css/main.sass
@@ -203,8 +203,6 @@ section.scroll
         left: 0
     img.arrow.right
         right: 0
-        z-index: 2
-        cursor: pointer
 
     .kinetic
         overflow: hidden
@@ -246,12 +244,12 @@ section.scroll
 section#content
     margin: 10%
 
+    img.arrow
+        z-index: 0
     img.arrow.left
         left: 7%
     img.arrow.right
         right: 7%
-        z-index: 2
-        cursor: pointer
     
     section#description
         width: 80%
